--- a/css/style.css
+++ b/css/style.css
@@ -301,15 +301,12 @@ main {
   justify-content: space-between;
 }
 
-.lodging-image {
-  height: 110px;
-}
-
 /* Miniature de card hébergement */
-.lodging img {
+.lodging-image {
+  position: relative;
   width: 100%;
-  height: 100%;
-  border-radius: 20px 20px 0 0;
+  aspect-ratio: 2.07 / 1;
+  border-radius: 15px 15px 0 0;
   object-fit: cover;
 }
 
@@ -387,16 +384,12 @@ main {
   justify-content: space-between;
 }
 
-.popular-image {
-  width: 120px;
-  height: 130px;
-}
-
 /* Miniature card populaire */
-.popular img {
-  width: 100%;
-  height: 100%;
-  border-radius: 20px 0 0 20px;
+.popular-image {
+  position: relative;
+  width: 37%;
+  aspect-ratio: 0.95 / 1;
+  border-radius: 15px 0 0 15px;
   object-fit: cover;
 }
 
@@ -410,7 +403,6 @@ main {
 }
 
 .popular h3 {
-  width: 85%;
   padding: 4% 0 0 0;
 }
 
@@ -434,18 +426,21 @@ main {
 
 /* Div avec les cards activités */
 .activities-list {
-  height: 446px;
+  position: relative;
+  aspect-ratio: 3.01 / 1;
   margin: 25px 0 0 0;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 
 /* Encadré blanc card activité */
 .activities-list a {
-  width: 22%;
+  position: relative;
+  aspect-ratio: 0.68 / 1;
+  width: 22.7%;
   height: 100%;
   border-radius: 20px 20px 20px 20px;
   background-color: #ffffff;
@@ -455,42 +450,55 @@ main {
 
 /* Encadré 2eme card */
 .activities-list a:nth-child(2) {
-  height: 48%;
+  height: initial;
+  position: relative;
+  aspect-ratio: 1.28 / 1;
+  align-self: flex-start;
 }
 
 /* Encadré 3eme card */
 .activities-list a:nth-child(3) {
-  height: 37%;
+  height: initial;
+  position: relative;
+  aspect-ratio: 1.84 / 1;
 }
 
 /* Encadré 5eme card */
 .activities-list a:nth-child(5) {
-  height: 44%;
+  height: initial;
+  position: relative;
+  aspect-ratio: 1.55 / 1;
 }
 
 /* Encadré 6eme card */
 .activities-list a:nth-child(6) {
-  height: 47%;
+  height: initial;
+  position: relative;
+  aspect-ratio: 1.44 / 1;
 }
 
 /* Miniature 2eme card */
 .activities-list a:nth-child(2) img {
-  height: 79%;
+  position: relative;
+  aspect-ratio: 1.68 / 1;
 }
 
 /* Miniature 3eme card */
 .activities-list a:nth-child(3) img {
-  height: 72%;
+  position: relative;
+  aspect-ratio: 2.77 / 1;
 }
 
 /* Miniature 5eme card */
 .activities-list a:nth-child(5) img {
-  height: 76%;
+  position: relative;
+  aspect-ratio: 2.17 / 1;
 }
 
 /* Miniature 6eme card */
 .activities-list a:nth-child(6) img {
-  height: 76%;
+  position: relative;
+  aspect-ratio: 1.97 / 1;
 }
 
 /* Card activité */
@@ -502,8 +510,9 @@ main {
 
 /* Miniature card activité */
 .activity img {
+  position: relative;
+  aspect-ratio: 0.78 / 1;
   width: 100%;
-  height: 400px;
   border-radius: 20px 20px 0 0;
   object-fit: cover;
 }
@@ -524,8 +533,9 @@ footer {
   width: 93%;
   max-width: 1340px;
   margin: 0 auto 0 auto;
-  padding: 3% 2% 4% 2%;
+  padding: 3% 25% 4% 0;
   display: flex;
+  justify-content: space-between;
 }
 
 /* Tout le contenu de chaque div */
@@ -539,14 +549,4 @@ footer p {
   margin: 0 0 22px 0;
   font-size: 17px;
   font-weight: bold;
-}
-
-/* Espacement entre A propos et Nos Hébergements */
-.about {
-  margin: 0 228px 0 0;
-}
-
-/* Espacement entre Nos Hébergements et Assistance */
-.our-lodgings {
-  margin: 0 292px 0 0;
 }
