--- a/css/tablet-small.css
+++ b/css/tablet-small.css
@@ -140,7 +140,7 @@ main {
 }
 
 .lodging-list {
-  margin: 15px 0 0 0;
+  margin: 20px 0 0 0;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -150,7 +150,7 @@ main {
 .lodging-list a {
   width: 41%;
   max-width: 312px;
-  margin: 0 5px 12px 5px;
+  margin: 0 1% 3.5% 1%;
 }
 
 /* "Afficher plus" */
@@ -188,13 +188,14 @@ main {
 .popular-list a {
   width: 41%;
   max-width: 312px;
-  margin: 0 5px 12px 5px;
+  margin: 0 1% 2.5% 1%;
 }
 
 /* Card populaire */
 .popular {
   flex-direction: column;
 }
+
 .popular-image {
   position: relative;
   width: 100%;
@@ -256,7 +257,6 @@ main {
   margin-bottom: 1.1%;
   position: relative;
   aspect-ratio: 1.28 / 1;
-  align-self: initial;
 }
 
 /* Encadré 3eme card */
