--- a/css/smartphone-large.css
+++ b/css/smartphone-large.css
@@ -151,9 +151,9 @@ main {
 }
 
 .lodging-list {
-  margin: 20px 0 0 0;
+  margin: 4% auto 0 auto;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -189,9 +189,9 @@ main {
 }
 
 .popular-list {
-  margin: 15px 0 0 0;
+  margin: 4% auto 0 auto;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -199,7 +199,7 @@ main {
 .popular-list a {
   width: 48%;
   max-width: 276px;
-  margin: 0 1% 2.5% 1%;
+  margin: 0 1% 3.5% 1%;
 }
 
 /* Card populaire */
@@ -248,7 +248,7 @@ main {
 
 /* Div avec les cards activités */
 .activities-list {
-  max-height: 805px;
+  max-width: 576px;
   margin: 25px auto 0 auto;
   aspect-ratio: 0.715 / 1;
   align-items: center;
