--- a/css/tablet-small.css
+++ b/css/tablet-small.css
@@ -140,9 +140,9 @@ main {
 }
 
 .lodging-list {
-  margin: 20px 0 0 0;
+  margin: 4% auto 0 auto;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -150,7 +150,7 @@ main {
 .lodging-list a {
   width: 41%;
   max-width: 312px;
-  margin: 0 1% 3.5% 1%;
+  margin: 0 1% 5% 1%;
 }
 
 /* "Afficher plus" */
@@ -178,9 +178,9 @@ main {
 }
 
 .popular-list {
-  margin: 15px 0 0 0;
+  margin: 4% auto 0 auto;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -188,7 +188,7 @@ main {
 .popular-list a {
   width: 41%;
   max-width: 312px;
-  margin: 0 1% 2.5% 1%;
+  margin: 0 1% 5% 1%;
 }
 
 /* Card populaire */
@@ -237,16 +237,15 @@ main {
 
 /* Div avec les cards activités */
 .activities-list {
-  width: 85%;
-  max-width: 650px;
+  max-width: 762px;
   margin: 25px auto 0 auto;
-  aspect-ratio: 0.71 / 1;
+  aspect-ratio: 0.835 / 1;
   align-items: center;
 }
 
 /* Encadré blanc card activité */
 .activities-list a {
-  width: calc(46% + 3px);
+  width: calc(41% - 10px);
   max-width: 302px;
   height: initial;
 }
