--- a/css/smartphone-large.css
+++ b/css/smartphone-large.css
@@ -151,6 +151,7 @@ main {
 }
 
 .lodging-list {
+  max-width: 576px;
   margin: 4% auto 0 auto;
   flex-direction: row;
   justify-content: space-around;
@@ -189,6 +190,7 @@ main {
 }
 
 .popular-list {
+  max-width: 576px;
   margin: 4% auto 0 auto;
   flex-direction: row;
   justify-content: space-around;
@@ -251,7 +253,7 @@ main {
   max-width: 576px;
   margin: 25px auto 0 auto;
   aspect-ratio: 0.715 / 1;
-  align-items: center;
+  align-content: space-around;
 }
 
 /* Encadré blanc card activité */
