--- a/css/style.css
+++ b/css/style.css
@@ -1,547 +1,554 @@
 /* || STYLE GENERAL */
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
-
 a,
 a:focus,
 a:active {
-  text-decoration: none; /* On enlève la décoration */
-  color: #000000;
+	text-decoration: none;
+	color: #000000;
 }
 
 /* "Trouvez votre hébergement..." */
 h1 {
-  font-size: 21px;
+	font-size: 21px;
 }
 
 /* "Hébergements à Marseille", "Les plus populaires" et "Activités à Marseille" */
 h2 {
-  font-size: 20px;
+	font-size: 20px;
 }
-
 /* Pour chaque titre de card */
 h3 {
-  font-size: 14px;
+	font-size: 14px;
 }
-
 ul {
-  list-style-type: none;
+	list-style-type: none;
 }
-
 body {
-  font-family: "Raleway", serif;
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
+	font-family: "Raleway", serif;
 }
 
 /* Pour chaque étoile "vide" */
 .empty-star {
-  color: #d9d9d9;
+	color: #d9d9d9;
 }
 
 /* Prix hébergement */
 .price {
-  font-size: 13px;
+	font-size: 13px;
 }
 
 /* Quand un prix est bas */
 .hot-price {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 /* Note étoiles */
 .rating {
-  width: 68px;
-  color: #0065fc;
-  font-size: 11px;
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
+	width: 68px;
+	color: #0065fc;
+	font-size: 11px;
 }
 
 /* || HEADER */
 
 header {
-  width: 93%;
-  max-width: 1340px;
-  margin: 0 auto 0 auto;
-  display: flex;
-  justify-content: space-between; /* Pour avoir le logo tout à gauche et le nav tout à droite */
+	display: flex;
+	justify-content: space-between;
+	margin: 0 auto 0 auto;
+	max-width: 1340px;
+	/* Pour avoir le logo tout à gauche et le nav tout à droite */
+	width: 93%;
 }
 
 /* Logo */
 header img {
-  width: 95.5px;
-  height: 45px;
-  margin: 34px 0 0 3%;
+	margin: 34px 0 0 3%;
+	width: 95.5px;
+	height: 45px;
 }
 
 header ul {
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-  display: flex;
-  justify-content: space-around; /* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
-  align-items: baseline; /* On aligne en bas */
+	display: flex;
+	justify-content: space-around;
+	padding: 0;
+	font-size: 16px;
+	/* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
+	align-items: baseline;
+	/* On aligne en bas */
+	margin: 0;
 }
 
 header li {
-  padding: 45px 22px 0px 22px; /* Permet d'avoir la bordure tout en haut */
-  border-top: 2px solid transparent; /* Evite le décalage du texte lors du hover */
+	padding: 45px 22px 0px 22px;
+	/* Permet d'avoir la bordure tout en haut */
+	border-top: 2px solid transparent;
 }
 
 /* Bordure devient bleu quand la souris passe sur le li */
 header li:hover {
-  border-top: 2px solid #0065fc;
+	border-top: 2px solid #0065fc;
 }
 
 /* Hébergements et Activités deviennent bleu au passage de la souris */
 header li:hover a {
-  color: #0065fc;
+	color: #0065fc;
 }
 
 /* || MAIN */
 main {
-  width: 93%;
-  max-width: 1340px;
-  margin: 2% auto 4% auto;
-  flex: 1 0 auto;
+	flex: 1 0 auto;
+	margin: 2% auto 4% auto;
+	width: 93%;
+	max-width: 1340px;
 }
 
 /* "En plein centre ville..." */
 .search-filters p {
-  font-size: 16px;
-  font-weight: normal;
+	font-size: 16px;
+	font-weight: normal;
 }
 
 /* || BARRE DE RECHERCHE */
 
 .search-bar {
-  margin: 1% 0 0 0;
-  display: flex;
+	display: flex;
+	margin: 1% 0 0 0;
 }
 
 .fa-location-dot {
-  height: 50px;
-  width: 50px;
-  border-top-left-radius: 20px 20px;
-  border-bottom-left-radius: 20px 20px;
-  background-color: #f2f2f2;
-  font-size: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-top-left-radius: 20px 20px;
+	border-bottom-left-radius: 20px 20px;
+	background-color: #f2f2f2;
+	width: 50px;
+	height: 50px;
+	font-size: 16px;
 }
 
 /* Champ de recherche */
 .search {
-  width: 236px;
-  height: 50px;
-  border: 0px;
-  border-top: 1px solid #f2f2f2;
-  border-bottom: 1px solid #f2f2f2;
-  padding: 0 0 0 16px; /* On se décale un peu de la gauche */
-  font-size: 16px;
-  font-weight: bold;
+	border-top: 1px solid #f2f2f2;
+	border-bottom: 1px solid #f2f2f2;
+	padding: 0 0 0 16px;
+	width: 236px;
+	height: 50px;
+	font-size: 16px;
+	font-weight: bold;
+	/* On se décale un peu de la gauche */
+	border: 0px;
 }
 
 .search-button {
-  width: 130px;
-  border-top-right-radius: 20px 20px; /* On arrondit l'angle supérieur droit */
-  border-bottom-right-radius: 20px 20px; /* On arrondit l'angle inférieur droit */
-  border: 0px solid;
-  background-color: #0065fc;
-  font-size: 16px;
-  font-weight: bold;
-  color: #ffffff;
+	border: 0px solid;
+	border-top-right-radius: 20px 20px;
+	width: 130px;
+	color: #ffffff;
+	font-size: 16px;
+	font-weight: bold;
+	/* On arrondit l'angle supérieur droit */
+	border-bottom-right-radius: 20px 20px;
+	/* On arrondit l'angle inférieur droit */
+	background-color: #0065fc;
 }
 
 .search-button:before {
-  content: "Rechercher";
+	content: "Rechercher";
 }
 
 /* || FILTRES ET RESULTATS */
 
 .filters-results {
-  height: 112px;
-  max-width: 929px;
-  margin: 0 0 0 1%;
+	margin: 0 0 0 1%;
+	max-width: 929px;
+	height: 112px;
 }
 
 .filters-list {
-  margin: 2% 0 0 9px;
-  display: flex; /* Permettre à la phrase de revenir à la ligne */
-  flex-wrap: wrap;
-  align-items: center;
+	display: flex;
+	align-items: center;
+	margin: 2% 0 0 9px;
+	/* Permettre à la phrase de revenir à la ligne */
+	flex-wrap: wrap;
 }
 
 /* "Filtres" */
 .filters-list span {
-  font-weight: bold; /* "Filtres" en gras */
-  font-size: 17px;
+	font-weight: bold;
+	/* "Filtres" en gras */
+	font-size: 17px;
 }
 
 /* Chaque filtre */
 .filters {
-  margin: 5px 0 5px 30px;
-  border: 2px solid #d9d9d9;
-  border-left: 0px;
-  border-radius: 100px 100px 100px 100px; /* On arrondit les coins */
-  background-color: #ffffff;
-  color: #000000;
-  font-weight: bold;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 5px 0 5px 30px;
+	border: 2px solid #d9d9d9;
+	border-left: 0px;
+	border-radius: 100px 100px 100px 100px;
+	background-color: #ffffff;
+	color: #000000;
+	/* On arrondit les coins */
+	font-weight: bold;
 }
 
 /* Logo filtre */
 .filters .fa-solid {
-  width: 50px;
-  height: 45px;
-  background-color: #deebff;
-  border-radius: 100px 100px 100px 100px; /* Cercle */
-  color: #0065fc;
-  font-size: 17px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 100px 100px 100px 100px;
+	background-color: #deebff;
+	width: 50px;
+	height: 45px;
+	color: #0065fc;
+	/* Cercle */
+	font-size: 17px;
 }
 
 .filters:hover {
-  background-color: #0065fc;
-  color: #ffffff;
+	background-color: #0065fc;
+	color: #ffffff;
 }
 
 .filters:hover .fa-solid {
-  color: #0065fc; /* On laisse l'icone en bleu */
+	color: #0065fc;
 }
 
 /* Intitulé filtre */
 .filters span {
-  padding: 0 20px 0 10px;
+	padding: 0 20px 0 10px;
 }
 
 /* Dimensions de la div avec logo + phrase */
 .results {
-  margin: 3% 0 0 0;
-  font-size: 16px;
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
+	margin: 3% 0 0 0;
+	font-size: 16px;
 }
 
 .fa-info {
-  width: 24px;
-  height: 24px;
-  border-radius: 100px 100px 100px 100px; /* Cercle */
-  border: 1px solid #d9d9d9;
-  font-size: 12px;
-  color: #0065fc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 1px solid #d9d9d9;
+	border-radius: 100px 100px 100px 100px;
+	width: 24px;
+	height: 24px;
+	color: #0065fc;
+	/* Cercle */
+	font-size: 12px;
 }
 
 /* Phrase nombre de résultats */
 .results p {
-  margin: 0 0 0 10px;
+	margin: 0 0 0 10px;
 }
 
 /* Div hébergements et populaires */
 .lodgings-popular {
-  margin: 36px 0 0 0;
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
+	margin: 36px 0 0 0;
 }
 
 /* || HEBERGEMENTS MARSEILLE */
 
 #lodgings {
-  width: 65%;
-  background-color: #f2f2f2;
-  border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
-  padding: 0 3% 0 3%;
+	border-radius: 20px 20px 20px 20px;
+	background-color: #f2f2f2;
+	padding: 0 3% 0 3%;
+	width: 65%;
 }
 
 /* "Hébergements à Marseille" */
 #lodgings h2 {
-  width: 100%;
-  margin: 35px 0 7px 0;
+	margin: 35px 0 7px 0;
+	width: 100%;
 }
 
 .lodging-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 /* Encadré blanc card hébergement */
 .lodging-list a {
-  width: 31%;
-  margin: 2% 0 2% 0;
-  padding: 5px;
-  border-radius: 20px 20px 20px 20px;
-  box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea,
-    0px -4px 6px #eaeaea;
-  background-color: #ffffff;
+	margin: 2% 0 2% 0;
+	border-radius: 20px 20px 20px 20px;
+	box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea,
+		0px -4px 6px #eaeaea;
+	background-color: #ffffff;
+	padding: 5px;
+	width: 31%;
 }
 
 /* Card hébergement */
 .lodging {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin: 0;
 }
 
 /* Miniature de card hébergement */
 .lodging-image {
-  position: relative;
-  width: 100%;
-  aspect-ratio: 2.07 / 1;
-  border-radius: 15px 15px 0 0;
-  object-fit: cover;
+	position: relative;
+	border-radius: 15px 15px 0 0;
+	width: 100%;
+	aspect-ratio: 2.07 / 1;
+	object-fit: cover;
 }
 
 .lodging figcaption {
-  padding: 0 0 0 4%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	padding: 0 0 0 4%;
 }
 
 .lodging h3 {
-  padding: 4% 0 0 0;
+	padding: 4% 0 0 0;
 }
 
 .lodging .price {
-  padding: 1% 0 0 0;
+	padding: 1% 0 0 0;
 }
 
 .lodging .rating {
-  padding: 3% 0 3% 0;
+	padding: 3% 0 3% 0;
 }
 
 /* "Afficher plus" */
 .show-more {
-  width: 100%;
-  margin: 3% 0 5% 0;
-  font-size: 16px;
-  font-weight: bold;
+	margin: 3% 0 5% 0;
+	width: 100%;
+	font-size: 16px;
+	font-weight: bold;
 }
 
 /* || LES PLUS POPULAIRES */
 
 .most-popular {
-  width: 31%;
-  border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
-  padding: 0 3% 0 3%;
-  background-color: #f2f2f2;
-  flex-shrink: 2;
+	flex-shrink: 2;
+	border-radius: 20px 20px 20px 20px;
+	background-color: #f2f2f2;
+	padding: 0 3% 0 3%;
+	width: 31%;
 }
 
 /* "Les plus populaires" */
 .most-popular h2 {
-  margin: 35px 0 7px 0;
-  display: inline-block;
+	display: inline-block;
+	margin: 35px 0 7px 0;
 }
 
 /* Etoile "Les plus populaires" */
 .most-popular-star {
-  margin: 35px 0 7px 0;
-  font-size: 20px;
-  float: right;
+	float: right;
+	margin: 35px 0 7px 0;
+	font-size: 20px;
 }
 
 .popular-list {
-  margin: 5% 0 0 0;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: space-between;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 5% 0 0 0;
 }
 
 /* Encadré blanc card populaire */
 .popular-list a {
-  margin: 0 0 8% 0;
-  padding: 5px;
-  border-radius: 20px 20px 20px 20px;
-  background-color: #ffffff;
-  box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea,
-    0px -4px 6px #eaeaea;
+	margin: 0 0 8% 0;
+	border-radius: 20px 20px 20px 20px;
+	box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea,
+		0px -4px 6px #eaeaea;
+	background-color: #ffffff;
+	padding: 5px;
 }
 
 /* Card populaire */
 .popular {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 
 /* Miniature card populaire */
 .popular-image {
-  position: relative;
-  width: 37%;
-  aspect-ratio: 0.95 / 1;
-  border-radius: 15px 0 0 15px;
-  object-fit: cover;
+	position: relative;
+	border-radius: 15px 0 0 15px;
+	width: 37%;
+	aspect-ratio: 0.95 / 1;
+	object-fit: cover;
 }
 
 /* Légende card populaire */
 .popular figcaption {
-  padding: 0 0 0 4%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  flex: 1;
+	display: flex;
+	flex: 1;
+	flex-direction: column;
+	justify-content: flex-end;
+	padding: 0 0 0 4%;
 }
 
 .popular h3 {
-  padding: 4% 0 0 0;
+	padding: 4% 0 0 0;
 }
 
 /* Prix populaire */
 .popular .price {
-  padding: 5% 0 0 0;
-  flex-grow: 1;
+	flex-grow: 1;
+	padding: 5% 0 0 0;
 }
 
 /* Note populaire */
 .popular .rating {
-  padding: 3% 0 3% 0;
+	padding: 3% 0 3% 0;
 }
 
 /* || ACTIVITES MARSEILLE */
 
 /* "Activités à Marseille" */
 #activities h2 {
-  margin: 50px 0 0 0;
+	margin: 50px 0 0 0;
 }
 
 /* Div avec les cards activités */
 .activities-list {
-  position: relative;
-  aspect-ratio: 3.01 / 1;
-  margin: 25px 0 0 0;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
+	display: flex;
+	position: relative;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-items: flex-start;
+	justify-content: space-between;
+	margin: 25px 0 0 0;
+	aspect-ratio: 3.01 / 1;
 }
 
 /* Encadré blanc card activité */
 .activities-list a {
-  position: relative;
-  aspect-ratio: 0.68 / 1;
-  width: 22.7%;
-  height: 100%;
-  border-radius: 20px 20px 20px 20px;
-  background-color: #ffffff;
-  box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea,
-    0px -4px 6px #eaeaea;
+	position: relative;
+	border-radius: 20px 20px 20px 20px;
+	box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea,
+		0px -4px 6px #eaeaea;
+	background-color: #ffffff;
+	width: 22.7%;
+	height: 100%;
+	aspect-ratio: 0.68 / 1;
 }
 
 /* Encadré 2eme card */
 .activities-list a:nth-child(2) {
-  height: initial;
-  position: relative;
-  aspect-ratio: 1.28 / 1;
+	position: relative;
+	height: initial;
+	aspect-ratio: 1.28 / 1;
 }
 
 /* Encadré 3eme card */
 .activities-list a:nth-child(3) {
-  height: initial;
-  position: relative;
-  aspect-ratio: 1.84 / 1;
+	position: relative;
+	height: initial;
+	aspect-ratio: 1.84 / 1;
 }
 
 /* Encadré 5eme card */
 .activities-list a:nth-child(5) {
-  height: initial;
-  position: relative;
-  aspect-ratio: 1.55 / 1;
+	position: relative;
+	height: initial;
+	aspect-ratio: 1.55 / 1;
 }
 
 /* Encadré 6eme card */
 .activities-list a:nth-child(6) {
-  height: initial;
-  position: relative;
-  aspect-ratio: 1.44 / 1;
+	position: relative;
+	height: initial;
+	aspect-ratio: 1.44 / 1;
 }
 
 /* Miniature 2eme card */
 .activities-list a:nth-child(2) img {
-  position: relative;
-  aspect-ratio: 1.68 / 1;
+	position: relative;
+	aspect-ratio: 1.68 / 1;
 }
 
 /* Miniature 3eme card */
 .activities-list a:nth-child(3) img {
-  position: relative;
-  aspect-ratio: 2.77 / 1;
+	position: relative;
+	aspect-ratio: 2.77 / 1;
 }
 
 /* Miniature 5eme card */
 .activities-list a:nth-child(5) img {
-  position: relative;
-  aspect-ratio: 2.17 / 1;
+	position: relative;
+	aspect-ratio: 2.17 / 1;
 }
 
 /* Miniature 6eme card */
 .activities-list a:nth-child(6) img {
-  position: relative;
-  aspect-ratio: 1.97 / 1;
+	position: relative;
+	aspect-ratio: 1.97 / 1;
 }
 
 /* Card activité */
 .activity {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
 }
 
 /* Miniature card activité */
 .activity img {
-  position: relative;
-  aspect-ratio: 0.78 / 1;
-  width: 100%;
-  border-radius: 20px 20px 0 0;
-  object-fit: cover;
+	position: relative;
+	border-radius: 20px 20px 0 0;
+	width: 100%;
+	aspect-ratio: 0.78 / 1;
+	object-fit: cover;
 }
 
 /* Pour chaque légende de card activité */
 .activity figcaption {
-  margin: 5% 0 5% 5%;
+	margin: 5% 0 5% 5%;
 }
 
 /* || Footer */
-
 footer {
-  background-color: #f2f2f2;
-  flex-shrink: 0;
+	flex-shrink: 0;
+	background-color: #f2f2f2;
 }
 
 .footer-list {
-  width: 93%;
-  max-width: 1340px;
-  margin: 0 auto 0 auto;
-  padding: 3% 25% 4% 0;
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
+	margin: 0 auto 0 auto;
+	padding: 3% 25% 4% 0;
+	width: 93%;
+	max-width: 1340px;
 }
 
 /* Tout le contenu de chaque div */
 footer li {
-  margin: 0 0 14px 0;
-  font-size: 15px;
+	margin: 0 0 14px 0;
+	font-size: 15px;
 }
 
 /* Titre de liste */
 footer p {
-  margin: 0 0 22px 0;
-  font-size: 17px;
-  font-weight: bold;
+	margin: 0 0 22px 0;
+	font-size: 17px;
+	font-weight: bold;
 }
